# hftprojectstudent

hftclient2026/: CMakeLists.txt  Makefile  README.md  hftclient2026  main.cpp  test_burst  test_burst.cpp  test_server  test_server.cpp
hftserver2026/: hftserver2026
